Get all click bubbles in right position, fix scroll overflow at bottom of page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -162,6 +162,39 @@ body {
     margin-top: 60px;
 }
 
+#click-bubble-2 {
+    margin-left: -15px;
+}
+
+#click-bubble-3 {
+    margin-left: -19px;
+}
+
+#click-bubble-4 {
+    margin-left: -49px;
+}
+
+#click-bubble-11 {
+    margin-left: -18px;
+}
+
+#click-bubble-12 {
+    margin-top: 90px;
+    margin-left: -50px;
+}
+
+#click-bubble-13 {
+    margin-left: -25px;
+}
+
+#click-bubble-14 {
+    margin-left: -18px;
+}
+
+#click-bubble-16 {
+    margin-left: -32px;
+}
+
 .show {
     opacity: 100%;
 }
